<resources>
    <string name="app_name">Hotspot Bucket</string>
    <string name="Press_to_add_your_favourite_place_in_the_bucket_list">Press to add your favourite place in the bucket list</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_the_image_of_the_place_you_like">Add the image of the place you like</string>
    <string name="add">Add</string>
    <string name="add_image">Add\nImage</string>
    <string name="save">save</string>
    <string name="hotspot_image">Hotspot Image</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="select_camera">Select camera</string>
    <string name="select_gallery">Select Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="demo">Demo</string>
    <string name="take_picture">Take picture</string>
    <string name="take_picture_description">Take picture description</string>
    <string name="no_places_added_note">No Hotspot found yet.\nKindly add one!!</string>
    <string name="item_list">Item list</string>
    <string name="nested_scroll_view">Nested Scroll View</string>
    <string name="add_location">Add location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_api_key" translatable="false">AIzaSyDb4JddOP0nCbr8hzvXbwbOaypVrWF7iSc</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="show_different_map_styles">Show different map styles</string>
    <string name="todo">TODO</string>
    <string name="select_the_location_with_marker">Select the location with marker</string>
    <string name="map_types">Map types</string>
    <string name="def">Default</string>
    <string name="select_default_map_type">Select default map type</string>
    <string name="select_satellite_map_type">Select satellite map type</string>
    <string name="satellite">Satellite</string>
    <string name="select_terrain_map_type">Select terrain map type</string>
    <string name="terrain">Terrain</string>
    <string name="end_activity">End activity</string>
    <string name="search">Search...</string>
    <string name="change_image">Change Image</string>
    <string name="get_the_location_on_map">Get the location on map</string>
    <string name="edit_the_image_for_this_place">Edit the image for this place</string>
    <string name="edit_the_title_of_the_place">Edit the title of the place</string>
    <string name="edit_this_place_s_description">Edit this place\'s description</string>
    <string name="edit_this_place_s_visit_date">Edit this place\'s visit date</string>
    <string name="edit_this_place_s_location_name">Edit this place\'s location name</string>
    <string name="modify">Modify</string>
</resources>