<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_bg">

    <TextView
        android:id="@+id/imagePickerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotspot_image"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <ImageButton
        android:id="@+id/closeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11sp"
        android:background="@drawable/ripple_for_close_btn"
        android:contentDescription="@string/close"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePickerTV"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/cameraIB"
                android:layout_width="60dp"
                android:background="@drawable/ripple_for_pick_btn"
                android:padding="13dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:layout_height="60dp"
                android:contentDescription="@string/select_camera"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp">

            <ImageButton
                android:id="@+id/galleryIB"
                android:layout_width="60dp"
                android:background="@drawable/ripple_for_pick_btn"
                android:padding="13dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_image_24"
                android:layout_height="60dp"
                android:contentDescription="@string/select_gallery"/>

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>