<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/mapTypeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_types"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <ImageButton
        android:id="@+id/closeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11sp"
        android:background="@drawable/ripple_for_close_btn"
        android:contentDescription="@string/close"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapTypeTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="35dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/defaultMapTypeIB"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_iv_bg"
                android:padding="4dp"
                android:contentDescription="@string/select_default_map_type"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_map_style"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/defaultMapTypeTV"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/def"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginStart="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/satelliteMapTypeIB"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="4dp"
                android:background="@drawable/ic_iv_bg"
                android:contentDescription="@string/select_satellite_map_type"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_satellite_map_style"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/satelliteMapTypeTV"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/satellite"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/terrainMapTypeIB"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_iv_bg"
                android:padding="4dp"
                android:contentDescription="@string/select_terrain_map_type"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_terrain_map_style"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/terrainMapTypeTV"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/terrain"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>