<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPlaceActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/addPlacesAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/addPlacesToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_blue"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:titleTextColor="@color/white"
            app:title="Add Your Hotspot">
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/addPlacesAppBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/dark_yellow"
                app:hintTextColor="@color/dark_yellow"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eTTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:hint="@string/title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck">
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/dark_yellow"
                app:hintTextColor="@color/dark_yellow"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/tILTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eTDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:hint="@string/description"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck">
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/dark_yellow"
                app:hintTextColor="@color/dark_yellow"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/tILDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eTDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck">
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/dark_yellow"
                app:hintTextColor="@color/dark_yellow"
                android:layout_marginEnd="90dp"
                android:layout_marginStart="16dp"
                android:layout_marginVertical="16dp"
                app:helperText="Use map to add your present location"
                app:helperTextTextColor="@color/dark_dark_blue"
                app:layout_constraintTop_toBottomOf="@+id/tILDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/eTLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text=""
                    android:hint="@string/location"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="SpeakableTextPresentCheck">
                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/IBSelectLocation"
                android:layout_width="56dp"
                android:contentDescription="@string/add_location"
                android:layout_height="56dp"
                app:layout_constraintTop_toBottomOf="@+id/tILDate"
                android:scaleType="fitXY"
                android:padding="14dp"
                android:elevation="3dp"
                android:background="@drawable/ic_btn_bg"
                android:layout_marginTop="21dp"
                android:src="@drawable/ic_baseline_add_location_24"
                app:layout_constraintStart_toEndOf="@+id/tILLocation"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/lLImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tILLocation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/placeIV"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hotspot_image"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_img_bg"
                    android:src="@drawable/ic_image"
                    android:padding="1dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <Button
                        android:id="@+id/selectImageBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_image"
                        android:textSize="11sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:backgroundTint="@color/dark_dark_blue"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_margin="16dp"
                android:textSize="25sp"
                app:layout_constraintTop_toBottomOf="@+id/lLImage"
                android:backgroundTint="@color/dark_dark_blue"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>